test/parser/error_parsing_while_block.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn main(): unit {
    while 0.0 {
// CHECK: [[# @LINE + 2 ]]:1: error: expected '}' at the end of a block
// CHECK: [[# @LINE + 1 ]]:1: error: expected '}' at the end of a block
